move Screens::create post global config reading

It calls KConfigGroup what is not thread safe and
collides with threaded config reading.

BUG: 321164
FIXED-IN: 4.11
REVIEW: 111082